--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,15 @@
+server.port=8080
+server.error.include-message=always
 
 spring.jackson.serialization.INDENT_OUTPUT=true
 
-spring.jpa.hibernate.ddl-auto=update
+#MySql Properties
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_uptempo
 spring.datasource.username=root
 spring.datasource.password=ItalianPizza
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+#Hibernate Properties
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql:true
